<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="fill_parent"
              android:id="@+id/addIssue"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <TextView
        android:id="@+id/addIssueTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/add_issue"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_above="@id/purchasesection"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:text="@string/condition"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:orientation="vertical">

                <RadioGroup
                    android:id="@+id/condition"
                    android:layout_width="100dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_gravity="start"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/noCondition"
                        style="@style/radioButtonNoCondition"
                        android:checked="true"
                        android:contentDescription="@string/condition_none"/>

                    <RadioButton
                        android:id="@+id/badCondition"
                        style="@style/radioButtonBadCondition"
                        android:contentDescription="@string/condition_bad"/>

                    <RadioButton
                        android:id="@+id/notSoGoodCondition"
                        style="@style/radioButtonNotSoGoodCondition"
                        android:contentDescription="@string/condition_notsogood"/>

                    <RadioButton
                        android:id="@+id/goodCondition"
                        style="@style/radioButtonGoodCondition"
                        android:contentDescription="@string/condition_good"/>
                </RadioGroup>

                <TextView
                    android:id="@+id/addissue_condition_text"
                    android:layout_width="fill_parent"
                    android:layout_height="20dp"
                    android:textSize="12sp"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/purchasesection"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:text="@string/purchase_date"/>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="start|top"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/newpurchase"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <EditText
                            android:id="@+id/purchasedatenew"
                            android:layout_width="fill_parent"
                            android:layout_height="30dp"
                            android:layout_marginTop="0dp"
                            android:layout_marginBottom="0dp"
                            android:gravity="start|center"
                            android:hint="@string/purchase_date"
                            android:inputType="none"
                            android:paddingTop="0dp"
                            android:paddingBottom="8dp"
                            android:textSize="14sp">
                        </EditText>

                        <EditText
                            android:id="@+id/purchasetitlenew"
                            android:layout_width="fill_parent"
                            android:layout_height="30dp"
                            android:layout_marginTop="0dp"
                            android:layout_marginBottom="0dp"
                            android:gravity="start|center"
                            android:hint="@string/purchase_name"
                            android:inputType="text"
                            android:paddingTop="0dp"
                            android:paddingBottom="8dp"
                            android:textSize="14sp"/>

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="20dp"
                            android:orientation="horizontal">

                            <Button
                                android:id="@+id/createpurchase"
                                android:layout_width="0dp"
                                android:layout_height="fill_parent"
                                android:layout_weight="1"
                                android:background="@android:color/transparent"
                                android:text="@string/create"
                                android:textColor="#84cfc6"/>

                            <Button
                                android:id="@+id/createpurchasecancel"
                                android:layout_width="0dp"
                                android:layout_height="fill_parent"
                                android:layout_weight="1"
                                android:background="@android:color/transparent"
                                android:text="@string/cancel"
                                android:textColor="@android:color/white"/>
                        </LinearLayout>
                    </LinearLayout>

                    <Button
                        android:id="@+id/addpurchase"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/background_rounded_button"

                        android:text="@string/create_new_purchase_date"/>

                    <ProgressBar
                        android:id="@+id/progressBar"
                        android:layout_width="40dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:indeterminate="true"
                        android:visibility="gone"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/purchase_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="26dp"
                        tools:listitem="@layout/row_purchase"/>
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <Button
            android:id="@+id/addissue_cancel"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/cancel"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/addissue_ok"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/ok"
            android:textColor="#84cfc6"/>
    </LinearLayout>
</LinearLayout>