...
                android:padding="0dp"
                android:text="OK"
                tools:ignore="HardcodedText" />
        </LinearLayout>

        <com.simplecityapps.recyclerview_fastscroll.views.FastScrollRecyclerView
            android:id="@+id/itemList"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/tipIssueSelection"
            android:layout_above="@id/zoomWrapper"
            android:layout_marginTop="5dp"
            android:orientation="vertical"
...
            android:layout_marginBottom="10dp">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/cancelSelection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/validateSelection"
                android:layout_alignParentEnd="true"
                android:layout_centerHorizontal="false"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/cancel"
                android:src="@drawable/ic_cancel"
                app:backgroundTint="#555"
...
                app:rippleColor="@android:color/white" />

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/addToCollectionByStoryTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/addToCollectionBySelectionButton"
                android:layout_alignParentEnd="true"
                android:layout_centerHorizontal="false"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/by_story_title"
                android:gravity="center"
                android:padding="5dp"
...
                app:rippleColor="@android:color/white" />

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/addToCollectionFromRecentIssues"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/addToCollectionByPhotoButton"
                android:layout_alignParentEnd="true"
                android:layout_centerHorizontal="false"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/from_recent_issue"
                android:gravity="center"
                android:padding="5dp"
...
                app:rippleColor="@android:color/white" />

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/addToCollectionByFileButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/addToCollectionWrapper"
                android:layout_alignParentEnd="true"
                android:layout_centerHorizontal="false"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/by_cover_file"
...
