<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:minHeight="30dp"
    android:padding="0dp">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/authorlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:listitem="@layout/row_author" />
    <TextView
        android:id="@+id/storyTitle"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:text="@string/itemtitle"/>
</LinearLayout>